--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@types/react": "~16.9.0",
+    "@babel/core": "^7.12.10",
+    "@types/react": "^16.9.56",
     "@types/react-native": "~0.60.23",
     "babel-preset-expo": "~8.0.0",
-    "typescript": "~3.6.3"
+    "typescript": "^3.6.5"
   },
   "private": true
 }
